Convert application.properties to yaml version